avoid mobile controls covering donate

--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,9 @@
 	--pico-form-element-spacing-horizontal: var(--default-gap);
 }
 
-body {
-	position: relative;
-	min-height: 100vh;
-}
-
 /* Donate */
 [title="donate"] {
-	position: absolute;
-	bottom: var(--default-gap);
-	right: var(--default-gap);
+	float: right;
 }
 
 /* MENU */
